# pyplugnotas

./: .gitpod.Dockerfile  .gitpod.yml  Pipfile  README.md  pyproject.toml  setup.py
pyplugnotas/: __init__.py
pyplugnotas/nfe/: __init__.py  processing.py
tests/: test_pyplugnotas.py
