[tool.poetry]
name = "PyPlugnotas"
version = "0.1.0"
description = ""
authors = ["Rafael Sales <rafael.sales@startupcode.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
yapf = "^0.30.0"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
