[tool.poetry]
name = "pyplugnotas"
version = "0.1.0"
description = ""
authors = ["Startup Code <suporte@startupcode.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
pytest = "^6.2.4"
yapf = "^0.31.0"
pycodestyle = "^2.7.0"
pylint = "^2.8.2"
pydotplus = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"